<resources>
    <string name="app_name">Travel App</string>
    <string name="this_is_the_start_of_my_mobile_app">This is the start of my mobile app!</string>
    <string name="where_would_you_like_to_travel">Where would you like to travel?</string>
    <string name="internationally">Internationally</string>
    <string name="locally">Locally</string>
    <string name="find_destinations">View destinations!</string>
    <string name="number_of_travelers">Number of travelers</string>
    <string name="_2">2</string>
    <string name="how_many_travelers">How many travelers?</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="list_of_Destinations">List of Destinations</string>
    <string name="exit_app">Exit app</string>
    <string name="textview">TextView</string>
    <string name="this_is_the_second_activity">This is the second activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_for_destination_list">Fragment for destination list</string>
    <string name="load_master_detail">Load master-detail</string>
    <string name="title_city_list">Cities</string>
    <string name="title_city_detail">City Detail</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_location_to_see_distance">Enter location to see distance</string>
    <string name="calculate_distance">Calculate distance</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps">Google Maps</string>
    <string name="view_results">View Results!</string>
    <string name="distance_to_location">Distance to Location</string>
    <string name="enter_location">Enter Location:</string>
    <string name="destination">Destination</string>
    <string name="search_destinations">Search Destinations</string>
    <string name="find_results">Find Results!</string>
    <string name="enter_radius">Enter radius</string>
    <string name="to_find_locations_near_you_fill_out_forms_below_and_press_find_results">To find locations near you, fill out forms below and press Find Results!</string>

    <string-array name="categories_array">
        <item>Accommodations</item>
        <item>Amusements</item>
        <item>Sport</item>
        <item>Shops</item>
        <item>Foods</item>
        <item>Banks</item>
        <item>Religion</item>
        <item>Monuments</item>
        <item>Urban Environment</item>
        <item>All</item>
    </string-array>
</resources>