<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item android:id="@+id/action_destinations_list"
        android:title="@string/list_of_Destinations"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_google_maps"
        android:title="@string/google_maps"
        app:showAsAction="ifRoom"
        android:icon="@drawable/map_icon"
        />

    <item android:id="@+id/action_search_destinations"
        android:title="@string/search_destinations"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_exit_app"
        android:title="@string/exit_app"
        app:showAsAction="never"/>

</menu>