<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgColor">


    <TextView
        android:id="@+id/travel_question"
        style="@style/FontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        android:text="@string/where_would_you_like_to_travel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/travel_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_question">

        <RadioButton
            android:id="@+id/radio_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locally"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioButton
            android:id="@+id/radio_international"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internationally"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RadioGroup>

    <TextView
        android:id="@+id/number_travelers_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_many_travelers"
        app:layout_constraintTop_toBottomOf="@id/travel_radio"
        style="@style/FontStyle"
        />


    <EditText
        android:id="@+id/how_many_travelers"
        style="@style/FontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_2"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@id/number_travelers_question" />

    <Button
        android:id="@+id/find_destinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_destinations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_many_travelers" />

    <EditText
        android:id="@+id/distance_destination_input"
        style="@style/FontStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location_to_see_distance"
        app:layout_constraintTop_toBottomOf="@id/find_destinations" />

    <Button
        android:id="@+id/destination_distance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distance_destination_input" />

    <TextView
        android:id="@+id/radio_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_radio" />

    <FrameLayout
        android:id="@+id/destinationFragmentPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>